# personal-vault-task-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/obsidian_tasks_mcp/: __init__.py  filters.py  parser.py  server.py  vault.py
tests/: test_filters.py  test_parser.py  test_server.py  test_vault.py
tests/fixtures/sample_vault/Journal/: 2026-03-14.md
tests/fixtures/sample_vault/Projects/: work.md
